# windy-coin

./: .gitmodules  CLAUDE.md  README.md
.github/workflows/: release-windy-mine.yml
circuit/: .gitignore  Cargo.toml
circuit/core/: Cargo.toml
circuit/core/src/: lib.rs
circuit/guest/: Cargo.toml
circuit/guest/src/: main.rs
circuit/host/: Cargo.toml
circuit/host/src/: main.rs
circuit/methods/: Cargo.toml
circuit/programs/: README.md  factorial.wnd  fib.wnd  fib_gold.wnd  hello.wnd  hello_winds.wnd  hi_windy.wnd  puzzle_hard.wnd  sum_winds.wnd
cli/: Cargo.toml  README.md
cli/src/: main.rs
contracts/: foundry.toml  slither.config.json
contracts/broadcast/Deploy.s.sol/84532/: run-1778286294586.json  run-1778289841561.json
contracts/broadcast/DeployMainnet.s.sol/8453/: run-1778576882445.json
contracts/broadcast/DeployV2.s.sol/84532/: run-1778307069767.json  run-latest.json
contracts/script/: Deploy.s.sol  DeployMainnet.s.sol  DeployV2.s.sol  MigrateAdmin.s.sol
contracts/src/: Windy.sol  ZkExecutionMinter.sol  ZkExecutionMinterV2.sol
contracts/test/: Windy.t.sol  ZkExecutionMinter.t.sol  ZkExecutionMinterV2.t.sol
docs/: INDEXING.md  MINING-GUIDE.md  PHASE-2-MINING.md  PHASE-3-PLAN.md  TOKENOMICS.md
scripts/: mine.sh
