[package]
name = "windy-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ["std"] }
windy-lang = { version = "=2.2.1", features = ["metrics"] }
sha2 = "0.10"
windy-circuit-core = { path = "../core" }
alloy-sol-types = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false }
