[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
windy-circuit-core = { path = "../core" }
risc0-zkvm = { version = "^3.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
clap = { version = "4", features = ["derive"] }
alloy-sol-types = "1"
alloy-primitives = "1"
rand = "0.9"
